--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,17 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+#   - title: "Teaching"
+#     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+#   - title: "Portfolio"
+#     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#   - title: "Blog Posts"
+#     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://wony0404.github.io/files/Wonhee_Cho_Curriculum_Vitae.pdf
     
-  - title: "Guide"
-    url: /markdown/
+#   - title: "Guide"
+#     url: /markdown/
