--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Wonhee Cho's Website"
 title_separator          : "-"
 name                     : &name "Wonhee Cho"
-description              : &description "PhD candidate"
+description              : &description "Security Engineer"
 url                      : https://wony0404.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wony0404/wony0404.github.io"
